# SimpleAssistant

./: .gitignore  Makefile  README.md
client/src/: client  main.cpp
server/: CMakeLists.txt  Dockerfile
server/src/: connection.cpp  connection.h  main.cpp
server/src/commands/: command.h
server/src/gcp/: google_speech_2_text.cpp  google_speech_2_text.h  search.h
server/src/logging/: logger.h
server/test/: test_command.cpp  test_gemini_search.cpp  test_tts.cpp
